# StudioPilot

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
deploy/: Caddyfile.template  setup-caddy.sh
docs/: SPEC.md
gameos/: cli.py  collector.py  dashboard.py
gameos/kernel/: config.py  db.py  models.py  module.py  registry.py  runtime.py
gameos/modules/analyzers/: engagement_metrics.py  pnl_engine.py  roas_engine.py
gameos/modules/connectors/: admob.py  applovin_max.py  google_ads.py  heartbeat.py  meta_ads.py  mintegral.py
gameos/modules/outputs/: whatsapp_alerts.py
scripts/: google_oauth.py
sdk/unity/: GameOSAnalytics.cs
